applications/portainer/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.services.sbling.net`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          serversTransport: no-verify-tls
  tls:
    secretName: portainer-services-sbling-net-prod-cert
